2006-10-06 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/labyrinth.py:
	fix i18n stuff.  Hopefully.


2006-10-04 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* Browser.py:
	* MainWindow.py:
	Fix window icon

	* configure.ac:
	* src/MainWindow.py:
	* src/labyrinth.py:
	* src/DrawingThought.py:
	* src/Browser.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	* Makefile.am:
	* po/LINGUAS:
	* po/ChangeLog:
	* po/POTFILES.in:
	Add i18n framework.  Maybe.

	* src/Browser.py:
	Only activate 'Open' and 'Delete' when an item is selected
	
	* src/MMapArea.py:
	* src/MainWindow.py:	
	Set mode back properly when image is inserted
	
	* src/MMapArea.py:
	Only allow drawing in "Drawing" mode.  In edit mode, allow linking thoughts instead

	* src/Browser.py:
	* src/MainWindow.py:
	Set icon for browser and windows to be Labyrinth icon


2006-10-03 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/DrawingThought.py:
	* src/Links.py:
	* src/Makefile.am:
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	* data/labyrinth-ui.xml:
	Add DrawingThought.  Add "Drawing Mode" to toolbar
	Attempt to fix various problems with XML loading in all thought types
	Various code cleanups
	Make removing links work properly again (I hope)


2006-09-25 Don Scorgie <DonScorgie@Blueyonder.co.uk>

    * src/TextThought.py:
    Fix corner rounding when a thought only contains an 'i'
    * src/MMapArea.py:
    Fix problem when loading a map stuck in "AddImage" mode


2006-09-13 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MMapArea.py:
	Use the FileChooser instead of the old, nasty FileSelector

	* src/ImageThought.py:
	* src/TextThought.py:
	Curve the corners of thoughts slightly.  Makes the entire thing slightly prettier
	and less intimidating
	
	* src/ImageThought.py:
	Clip title to only be actual filename (ignore path and suffix)
	
	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/ImageThought.py: